alignment issues fixed

--- a/src/app/modules/core/components/edit-widget-props/edit-widget-props.component.scss
+++ b/src/app/modules/core/components/edit-widget-props/edit-widget-props.component.scss
@@ -2,7 +2,6 @@
     width: 100%;
     height: 100%;
     border-left: 1px solid black;
-    padding: 1%;
 }
 .edit-props__form {
     width: 100%;
