--- a/src/app/modules/core/components/view-code/view-code.component.scss
+++ b/src/app/modules/core/components/view-code/view-code.component.scss
@@ -37,6 +37,6 @@
     width: 100%;;
 }
 .external-links {
-    width: 60%;
+    width: 80%;
     height: 10%;
 }
