--- a/src/app/modules/core/components/widgets-list/widgets-list.component.scss
+++ b/src/app/modules/core/components/widgets-list/widgets-list.component.scss
@@ -5,7 +5,6 @@
     border-left: 1px solid black;
 }
 .widgets__groups {
-    margin: 3% 0;
     padding: 3%;
     summary {
         cursor: default;
