--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ html, body {
 .edit-props-form {
     width: 100%;
     height: 100%;
-    padding: 3% 2%;
+    padding: 3%;
 }
 .edit-props-form summary {
     cursor: default;
@@ -57,7 +57,7 @@ html, body {
     input {
         width: 100%;
         font-size: 1em;
-        padding: 10%;
+        padding: 5%;
     }
     input[type="color"] {
         padding: 0;
